--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><a href="#about" data-section=".about-us">ABOUT</a></li>
             <li><a href="#skills" data-section=".skills">SKILLS</a></li>
             <li><a href="#portfolio" data-section=".portfolio">PORTFOLIO</a></li>
-            <li><a href="#certicate" data-section=".certicate">CERTIFCATE</a></li>
+            <li><a href="#certificate" data-section=".certificate">CERTIFICATE</a></li>
             <li><a href="#contact" data-section=".contact">CONTACT</a></li>
         </ul>
     </div>
